--- a/style.css
+++ b/style.css
@@ -51,3 +51,50 @@ header, .navbar {
 .nav-bar a.nav-link {
     color: white;
 }
+
+.container-fluid {
+    padding: 0;
+}
+
+#mainslider .carousel-inner, .carousel-item {
+    height: 90vh;
+}
+
+#mainslider .carousel-caption {
+    top: 30%;
+}
+
+#mainslider .carousel-caption h2 {
+    font-size: 50px;
+    margin-bottom: 30px;
+}
+
+#mainslider .carousel-caption p {
+    font-size: 22px;
+    margin-bottom: 100px;
+    font-weight: 300;
+    color: #fff;
+}
+
+.main-btn {
+    background-color: #65DAF9;
+    color: #FFF;
+    text-transform: uppercase;
+    width: 200px;
+    height: 60px;
+    padding: 10px 20px;
+    border-radius: 30px;
+    border: 3px solid transparent;
+    transition: .5s;
+  }
+
+.main-btn:hover {
+    text-decoration: none;
+    color: #FFF;
+    background-color: transparent;
+    border-color: #3EC1D5;
+  }
+
+.carousel-indicators .active {
+    background-color: #65DAF9;
+  }
